<resources>
    <string name="app_name">HelloStranger</string>
    <string name="app_home">HOME</string>
    <string name="app_quick">QUICK MENU</string>
    <string name="app_all_menu">MENU PAN</string>
    <string name="app_store_loaction">현선이네</string>
    <string name="app_order_sheet">ORDER SHEET</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="dumy_store_time">Time 17:00 - 19:00</string>
    <string name="dumy_store_contact_number">Contact 02 - 347 - 2837</string>

    <string name="order_ready">ORDER</string>
    <string name="oder_sheet_kor_title">주문서입니다</string>
    <string name="oder_sheet_eng_title">(Show this screen to the employee)</string>
    <string name="oder_sheet_show_this_and_say">\"Yogi Jumunyiyo!\"</string>
    <string name="order_modify">수정하기</string>
    <string name="order_submit">주문완료</string>
    <string name="dumy_order_total">Total ₩ 17,800</string>


    <string name="for_having_equal_width">1</string>
    <string name="title_activity_main2">Main2Activity</string>


    <!--home fragment-->
    <string name="traditional">traditional</string>
    <string name="rice">rice</string>
    <string name="noodle">noodle</string>
    <string name="bbq">BBQ</string>
    <string name="snack">snack</string>
    <string name="fastfood">fastfood</string>


</resources>
